# truck_svi

./: Makefile  README.md  pyproject.toml
reports/human_made/: analysis_notes.txt
reports/human_made/prompt/: make-features.txt
truck_svi/: check_svi.py  download_svi.py  rank_svi.py  segment_svi.py  transform_svi.py
